# CONTENT-AGENT

./: .dockerignore  .env.example  .gitignore  CasinoGurus_ Content Agent Brief.docx  CasinoGurus_Brief_Implementation_Plan.md  CasinoGurus_CrewAI_Content_Brief_Implementation_Prompt.md  CasinoGurus_CrewAI_to_LangGraph_Migration_Prompt.md  DEPLOYMENT.md  Dockerfile  NEXUS_Create_Client_Form_Guide.docx  NEXUS_MULTI_CLIENT_FLOW.md  README.md  Sample_Output.json  claude_api_cost_2026_07_01_to_2026_07_14.csv  nexus-content-agent-generalization.md  package-lock.json  package-viewer.html  pyproject.toml  render.yaml
.claude/: settings.local.json
frontend/: .env.local.example  .eslintrc.json  apphosting.yaml  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/: proxy.ts
knowledge/: user_preference.txt
runs/baseline_prompts/: agent__casino_content_compliance_mandate_checker__backstory.txt  agent__casino_content_compliance_mandate_checker__goal.txt  agent__casino_content_compliance_mandate_checker__role.txt  agent__casino_content_seo_quality_checker__backstory.txt  agent__casino_content_seo_quality_checker__goal.txt  agent__casino_content_seo_quality_checker__role.txt  agent__casino_content_topic_discovery_specialist__backstory.txt  agent__casino_content_topic_discovery_specialist__goal.txt  agent__casino_content_topic_discovery_specialist__role.txt  (+18 more)
scripts/: create_gemmere_client.py  extract_casinogurus_profile.py  generate_refactored_yaml.py  grant_admin_roles.py  migrate_sqlite_to_pg.py  regression_prompt_diff.py  seed_client.py
(+46 files in other folders)
