[project]
name = "casinogurus_ai_content_engine___daily_5_topic_batch"
version = "0.1.0"
description = "casinogurus_ai_content_engine___daily_5_topic_batch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,file-processing,litellm,tools]>=1.15.2,<2.0.0",
    "exa-py",
    "openai>=1.0.0",
    "python-docx",
    "beautifulsoup4",
    # --- production API (FastAPI on Render) + Supabase Postgres ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary,pool]>=3.2",
    "pyjwt[crypto]>=2.8",
]

[project.scripts]
casinogurus_ai_content_engine___daily_5_topic_batch = "casinogurus_ai_content_engine___daily_5_topic_batch.main:run"
run_crew = "casinogurus_ai_content_engine___daily_5_topic_batch.main:run"
train = "casinogurus_ai_content_engine___daily_5_topic_batch.main:train"
replay = "casinogurus_ai_content_engine___daily_5_topic_batch.main:replay"
test = "casinogurus_ai_content_engine___daily_5_topic_batch.main:test"
run_with_trigger = "casinogurus_ai_content_engine___daily_5_topic_batch.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
